# OOP-CPP-Laboratory_5

./: .gitignore  CMakeLists.txt  README.md  main.cpp  materials.md
include/: doubly_linked_list.h  fixed_block_memory_resource.h
src/: fixed_block_memory_resource.cpp
tests/: test_arrayoffigures.cpp  test_doubly_linked_list.cpp  test_hexagon.cpp  test_iterator.cpp  test_memory_resource.cpp  test_pentagon.cpp  test_point.cpp  test_rhombus.cpp  test_struct.cpp
